<resources>
    <string name="app_name">Factory Test</string>
    <string name="pcba_test">PCBA Test</string>
    <string name="single_test">Single Test</string>
    <string name="auto_test">Auto Test</string>
    <string name="burn_test">Burn-in Test</string>
    <string name="test_report">Test report</string>
    <string name="recover">Factory reset</string>
    <string name="exit">Exit</string>
    <string name="back">B\na\nc\nk</string>
    <string name="magnet">Magnet</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="gravity">Gravity</string>
    <string name="power">Power</string>
    <string name="ram">RAM</string>
    <string name="sd_card">SD Card</string>
    <string name="udisk">UDisk</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wifi">wifi Test</string>
    <string name="sim_card">SIM Test</string>
    <string name="_3g">4G/SIM</string>
    <string name="gps">GPS</string>
    <string name="microphone">MIC</string>
    <string name="serialport">Serial</string>
    <string name="mcu">MCU</string>
    <string name="mcu_upgrade">MCU Upgrade</string>
    <string name="upgrade_successful">Upgrade successful</string>
    <string name="ethernet">Ethernet</string>
    <string name="camera">Camera</string>
    <string name="can">CAN</string>
    <string name="headphone">Headphone</string>
    <string name="speaker">Speaker</string>
    <string name="gpio">GPIO</string>
    <string name="led">LED</string>
    <string name="vibrate">Vibrate</string>
    <string name="keys">Keys</string>
    <string name="draw_screen">Draw Screen</string>
    <string name="touch_screen">Touch</string>
    <string name="lcd">LCD</string>
    <string name="backlight">Backlight</string>
    <string name="radio">Radio</string>
    <string name="systeminfo">SystemInfo</string>
    <string name="opened">Opened</string>
    <string name="closed">Closed</string>
    <string name="fail">Fail</string>
    <string name="unknown">Unknown</string>
    <string name="carrier_cmcc">中国移动</string>
    <string name="carrier_unicom">中国联通</string>
    <string name="carrier_telecom">中国电信</string>
    <string name="carrier_other">Other</string>
    <string name="sim_no_exists">No SIM</string>
    <string name="cell_id">cell id:</string>
    <string name="area_code">area code:</string>
    <string name="signal_strength">Signal Strength: </string>
    <string name="operator_name">Operator Name: </string>
    <string name="licensed">Licensed</string>
    <string name="unlicense">Unlicense</string>
    <string name="registered">Registered</string>
    <string name="unregister">Unregister</string>
    <string name="switch_in">Switch to built-in card</string>
    <string name="switch_out">Switch to external card</string>
    <string name="imei_none">IMEI is None</string>
    <string name="iccid_none">ICCID is None</string>
    <string name="comm_ok">Communication is normal</string>
    <string name="comm_fail">Communication exception</string>
    <string name="brightness_change">Does the screen brightness change?</string>
    <string name="bt_status">Bluetooth status:</string>
    <string name="bt_address">Bluetooth address:</string>
    <string name="open_camera_error">Open camera error</string>
    <string name="can_notify">Connect the ECU simulator, set the rate corresponding to Can, receive the data?</string>
    <string name="draw_notify">Click the screen and start the test, draw a line on the screen!</string>
    <string name="mac_address">MAC Address:</string>
    <string name="ip_address">IP Address:</string>
    <string name="connect_status">Connect Status:</string>
    <string name="fm_notify">Is the radio test correct?</string>
    <string name="fm_retest">Test the radio again</string>
    <string name="gpio_notify">Does GPIO cycle high and low?</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="gravity_notify">Are there data changes?</string>
    <string name="headphone_notify">Did you hear the music?</string>
    <string name="loud">Turn the volume up to max</string>
    <string name="upkey">UP Key: </string>
    <string name="downkey">Down Key: </string>
    <string name="powerkey">Power Key: </string>
    <string name="not_test">Not tested</string>
    <string name="lcd_notify">Tap the screen to start the test</string>
    <string name="led_notify">Is there a loop on the lamp target?</string>
    <string name="magnet_notify">Are there data changes?</string>
    <string name="auto_testing">Automatic test&#8230;</string>
    <string name="free_capacity">Free capacity</string>
    <string name="total_capacity">Total capatity</string>
    <string name="flash">Flash:</string>
    <string name="sdcard">SDCard:</string>
    <string name="serial_notify">Please tap the receiving and sending sides of the serial port and see if there is data received?</string>
    <string name="sim_status">SIM Status:</string>
    <string name="speaker_notify">Did you hear the music?</string>
    <string name="switch_music">Switch music</string>
    <string name="imei">SN:</string>
    <string name="kernel_ver">Kernel Ver:</string>
    <string name="system_ver">System Ver:</string>
    <string name="software_ver">Software Ver:</string>
    <string name="baseband_ver">Baseband Ver:</string>
    <string name="select_file">Click to select upgrade file</string>
    <string name="system_upgrade">System Upgrade</string>
    <string name="select_correct_file">Please select the correct upgrade package file!</string>
    <string name="wait_for_copy">Copying upgrade files, please wait…</string>
    <string name="wait_for_verify">Verifying upgrade files, please wait…</string>
    <string name="wait_for_upgrade">Upgrading, please wait…</string>
    <string name="upgrade_fail">Upgrade failed</string>
    <string name="udisk_umounted">U disk has been umounted</string>
    <string name="udisk_not_available">Udisk not available</string>
    <string name="touch_notify">Click the screen and start the test, draw multiple points on the screen at the same time!</string>
    <string name="usb_storage">usb storage:</string>
    <string name="vibrate_notify">Is the machine vibrating?</string>
    <string name="available">Available</string>
    <string name="not_available">Not available</string>
    <string name="normal">Normal</string>
    <string name="abnormal">Abnormal</string>
    <string name="fm_no_install">FM not installed</string>
    <string name="successful">Successful</string>
    <string name="is_right">Is Right</string>
    <string name="save_config_file">Save config file</string>
    <string name="save_ok">Save successful</string>
    <string name="voltage">Voltage: </string>
    <string name="battery">Battery: </string>
    <string name="not_charged">Not charged</string>
    <string name="charging">charging</string>
    <string name="none">None</string>
    <string name="set_ok">Set successful</string>
    <string name="switch_ok">Switch successful</string>
    <string name="test_finish">Test finish!</string>
    <string name="auto_test_mode">Auto test mode</string>
    <string name="manual_test_mode">Manual test mode</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="positioning_time">Positioning Time(s)</string>
    <string name="gps_status">GPS Status</string>
    <string name="positive">Positive</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="reset_factory">Are you sure you want to restore factory settings?</string>
    <string name="sure">Yes</string>
    <string name="cancel">No</string>
    <string name="host">USB Host</string>
    <string name="exit_burn">Exit Burn-in Test?</string>
</resources>