<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:gravity="center_horizontal"
            android:text="@string/speaker"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/red" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dip"
            android:src="@drawable/speaker" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:gravity="center_horizontal"
            android:text="@string/speaker_notify"
            android:textColor="@color/red"
            android:textSize="15dip" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="switchMusic"
                android:text="@string/switch_music" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="volumn2Max"
                android:text="@string/loud" />
        </LinearLayout>
    </LinearLayout>

    <com.android.factorytest.view.JudgeView
        android:id="@+id/judgeview"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true" />

</RelativeLayout>