<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_toLeftOf="@+id/judgeview"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:gravity="center_horizontal"
            android:text="@string/radio"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/red" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dip"
            android:src="@drawable/radio" />

        <TextView
            android:id="@+id/txtFmResult"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10.0dip"
            android:gravity="center_horizontal"
            android:text="@string/fm_notify"
            android:textColor="@color/red"
            android:textSize="20dip"
            android:visibility="gone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnFMTest"
            android:text="@string/fm_retest" />
    </LinearLayout>

    <com.android.factorytest.view.JudgeView
        android:id="@+id/judgeview"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true" />

</RelativeLayout>