<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10.0dip"
        android:text="@string/ethernet"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/red" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ethernet" />

        <LinearLayout
            android:layout_width="300dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="true"
                    android:text="@string/mac_address"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textSize="16.0sp" />

                <TextView
                    android:id="@+id/txt_mac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="true"
                    android:text="@string/unknown"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/red"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="true"
                    android:text="@string/ip_address"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textSize="16.0sp" />

                <TextView
                    android:id="@+id/txt_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="true"
                    android:text=""
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/red"
                    android:textSize="16.0sp" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="true"
                    android:text="@string/connect_status"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textSize="16.0sp" />

                <TextView
                    android:id="@+id/txt_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="true"
                    android:text=""
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/red"
                    android:textSize="16.0sp" />
            </LinearLayout>
            
        </LinearLayout>
    </LinearLayout>

    <com.android.factorytest.view.JudgeView
        android:id="@+id/judgeview"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true" />

</RelativeLayout>